--- a/src/components/pages/Error/Error.scss
+++ b/src/components/pages/Error/Error.scss
@@ -2,34 +2,32 @@
 
 .error-section {
   background-color: $clr-primary-10;
+  .error-container {
+    min-height: calc(100vh - 6rem);
+    max-height: 100%;
+    width: 85vw;
+    max-width: $max-width;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 
-.error-container {
-  min-height: calc(100vh - 6rem);
-  max-height: 100%;
-  width: 85vw;
-  max-width: $max-width;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
 .error-content {
   flex-basis: 40%;
   padding: 1rem 0;
+  h3 {
+    padding: 1rem 0 3rem;
+  }
+  p {
+    padding-bottom: 2rem;
+    color: $clr-grey-5;
+  }
 }
 
-.error-title {
-  padding: 1rem 0 3rem;
-}
-
-.error-content p {
-  padding-bottom: 2rem;
-  color: $clr-grey-5;
-}
-
-.btn {
+.error-btn {
   border-radius: $radius;
   border: none;
   padding: 0.7rem;
@@ -38,28 +36,22 @@
   text-transform: capitalize;
   box-shadow: $light-shadow;
   transition: $transition;
-}
-
-.btn:hover {
-  cursor: pointer;
-  box-shadow: $dark-shadow;
-}
-.error-btn {
   background-color: #91b3f0;
+  &:hover {
+    cursor: pointer;
+    box-shadow: $dark-shadow;
+    background-color: $clr-primary-5;
+    color: $clr-grey-1;
+  }
 }
 
-.error-btn:hover {
-  background-color: $clr-primary-5;
-  color: $clr-grey-1;
-}
-.error-image {
-  max-width: 800px;
-  max-height: 800px;
+.error-image-container {
+  // max-width: 100rem;
+  // max-height: 100rem;
   padding: 1rem 0;
-}
-
-.error-image img {
-  width: 100%;
+  img {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -67,16 +59,17 @@
     flex-direction: column-reverse;
     justify-content: space-around;
   }
-  .error-content h2,
-  p {
-    display: none;
-  }
   .error-content {
     flex-basis: 20%;
-
     text-align: center;
-  }
-  .error-title {
-    padding: 1rem;
+    h3 {
+      padding: 1rem;
+    }
+    h2 {
+      padding: 1rem;
+    }
+    p {
+      display: none;
+    }
   }
 }
