--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,33 +7,31 @@
   align-items: center;
   width: 100vw;
   z-index: 10;
-}
-
-.nav-center {
-  width: 85vw;
-  max-width: 1170px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.nav-logo {
-  width: 8rem;
+  .nav-center {
+    width: 85vw;
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .nav-logo {
+      width: 8rem;
+    }
+  }
 }
 
 .links li {
   display: inline;
-}
-.links a {
-  padding: 0.5rem 0.75rem;
-  display: inline-block;
-  font-size: 1rem;
-  color: $clr-grey-10;
-  transition: color 0.3s ease;
-}
-
-.links a:hover {
-  color: $clr-primary-7;
+  a {
+    padding: 0.5rem 0.75rem;
+    display: inline-block;
+    font-size: 1rem;
+    color: $clr-grey-10;
+    transition: color 0.3s ease;
+    &:hover {
+      color: $clr-primary-7;
+    }
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -47,8 +45,8 @@
     // in small screen use smaller version logo
     content: url("../../assets/images/moviedblogoSmall.svg");
     width: 4rem;
-  }
-  .links a {
-    padding: 0.25rem 0.4rem;
+    .links a {
+      padding: 0.25rem 0.4rem;
+    }
   }
 }
