--- a/src/components/pages/SingleMovie/SingleMovie.scss
+++ b/src/components/pages/SingleMovie/SingleMovie.scss
@@ -9,54 +9,43 @@
   margin: 0 auto;
   min-height: 100%;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: row;
   /* align-items: center; */
   justify-content: center;
   padding-top: 1rem;
 }
 .poster-container {
-  /* flex: 1 1 40%; */
   margin-right: 1rem;
   height: 100%;
+  img {
+    border-radius: $radius;
+    margin-bottom: 1rem;
+  }
+  .unavailable-image {
+    border: 0.2rem solid #d9d9d9;
+  }
 }
-
 .info-container {
   flex: 0 1 60%;
-}
-.poster-container img {
-  border-radius: $radius;
-  margin-bottom: 1rem;
-  /* width: 100%; */
-  /* height: 50%; */
-}
-
-.singleMovie-container .unavailable-image {
-  border: 0.2rem solid #d9d9d9;
-  /* height: 40vh; */
-  /* outline: none; */
-}
-/* .singleMovie-container .info {
-  margin: 1rem 0;
-  position: relative;
-} */
-.info-container .header {
-  background-color: $clr-primary-9;
-  border-radius: $radius;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  margin-bottom: 0.5rem;
-  position: relative;
-}
-.info-container .title {
-  margin-bottom: 1.5rem;
-}
-.info-container .release-date {
-  position: absolute;
-  bottom: 1rem;
-  left: 1rem;
+  .header {
+    background-color: $clr-primary-9;
+    border-radius: $radius;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 0.5rem;
+    position: relative;
+    .title {
+      margin-bottom: 1.5rem;
+    }
+    .release-date {
+      position: absolute;
+      bottom: 1rem;
+      left: 1rem;
+    }
+  }
 }
 
 .rating-container {
@@ -67,28 +56,27 @@
   background-color: $clr-primary-5;
   border-radius: $radius;
   padding: 0.5rem;
-}
-
-.rating-container .rating {
-  font-weight: lighter;
-}
-.rating span {
-  font-weight: bold;
+  .rating {
+    font-weight: lighter;
+    span {
+      font-weight: bold;
+    }
+  }
 }
 
 .genres-container {
   margin-bottom: 0.5rem;
   display: flex;
   flex-wrap: wrap;
+  .genres {
+    background-color: $clr-primary-9;
+    border: 0.1rem solid $clr-primary-5;
+    border-radius: 1rem;
+    margin: 0.25rem;
+    padding: 0.25rem 0.5rem;
+  }
 }
 
-.genres-container .genres {
-  background-color: $clr-primary-9;
-  border: 0.1rem solid $clr-primary-5;
-  border-radius: 1rem;
-  margin: 0.25rem;
-  padding: 0.25rem 0.5rem;
-}
 .info-container .overviwe {
   background-color: $clr-primary-9;
   margin-bottom: 0.5rem;
