--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,5 @@
 @import "../../App.scss";
+
 .navbar {
   height: 3rem;
   background-color: $clr-grey-1;
@@ -44,7 +45,7 @@
   .nav-logo {
     // in small screen use smaller version logo
     content: url("../../assets/images/moviedblogoSmall.svg");
-    width: 4rem;
+    width: 4rem !important;
     .links a {
       padding: 0.25rem 0.4rem;
     }
